--- a/Home.master
+++ b/Home.master
@@ -48,7 +48,8 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/views/DataServicesGridView.aspx">DataList in GridView</a></li>
                                 <li><a href="/views/jQueryAutoComplete.aspx">jQuery AutoComplete</a></li>
-                                <li><a href="/services/JsonAutoComplete.ashx?library=examples&file=cmastnewl2&fieldsList=CMCUSTNO:value,CMNAME:label&rows=12&qryfld1=CMNAME&qryval1=Smi&query=CMNAME%3E%3D'%7BCMNAME%7D'">Static AutoComplete Json</a></li>
+                                <%--<li><a href="/services/JsonAutoComplete.ashx?library=examples&file=cmastnewl2&fieldsList=CMCUSTNO:value,CMNAME:label&rows=12&qryfld1=CMNAME&qryval1=Smi&query=CMNAME%3E%3D'%7BCMNAME%7D'">Static AutoComplete Json</a></li>--%>
+                                <%--<li><a href="/services/JsonAutoComplete.ashx?library=examples&file=cmastnewl2&fieldsList=*all&rows=100&qryfld1=CMNAME&qryval1=Smi&query=CMNAME%3E%3D'%7BCMNAME%7D'">Static DataTable Json</a></li>--%>
                                 <li><a href="/views/ExportToExcel.aspx">Export to Excel</a></li>
                             </ul>
                         </li>
@@ -81,6 +82,7 @@
 
     <script src="/public/vendor/jquery/dist/jquery.min.js"></script>
     <script src="/public/vendor/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/public/vendor/underscore/underscore.js"></script>
     <script src="/public/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/public/vendor/bootstrap-growl/jquery.bootstrap-growl.min.js"></script>
 
