--- a/Home.master
+++ b/Home.master
@@ -48,8 +48,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/views/DataServicesGridView.aspx">DataList in GridView</a></li>
                                 <li><a href="/views/jQueryAutoComplete.aspx">jQuery AutoComplete</a></li>
-                                <%--<li><a href="/services/JsonAutoComplete.ashx?library=examples&file=cmastnewl2&fieldsList=CMCUSTNO:value,CMNAME:label&rows=12&qryfld1=CMNAME&qryval1=Smi&query=CMNAME%3E%3D'%7BCMNAME%7D'">Static AutoComplete Json</a></li>--%>
-                                <%--<li><a href="/services/JsonAutoComplete.ashx?library=examples&file=cmastnewl2&fieldsList=*all&rows=100&qryfld1=CMNAME&qryval1=Smi&query=CMNAME%3E%3D'%7BCMNAME%7D'">Static DataTable Json</a></li>--%>
+                                <li><a href="/views/AutoComplete.json.html" target="_blank">Static AutoComplete Json</a></li>
                                 <li><a href="/views/ExportToExcel.aspx">Export to Excel</a></li>
                             </ul>
                         </li>
