Keep commit current

--- a/Home.master
+++ b/Home.master
@@ -46,7 +46,7 @@
                     </button>
                 </div><!-- /.navgar-header -->
                 <div class="collapse navbar-collapse">
-                    <p class="navbar-text">AVR AutoComplete</p>
+                    <p class="navbar-text">AVR Web Demo</p>
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a></li>
                         <li><a href="#about">About</a></li>
@@ -76,12 +76,14 @@
                     <%--<h3><asp:Label ID="labelPageHeading" runat="server" Text="Exampleddd"></asp:Label></h3>--%>
                 </div>
             </section>
+
             <section class="container">
                 <!-- Example row of columns -->
                 <div class="row">
                    	<asp:contentplaceholder id="ContentPlaceHolderLeftColumn" runat="server"></asp:contentplaceholder> 
                 </div>
             </section>
+
         </main>
         <footer class="container">
             <div class="row">
